Assignment2_Zhao_Duo/tests/automated/tests/bad/ScientificNotationBigPlusWithBadChars-9.calc
a .0%E+2 b 1.%E+2 c 2.3%E+3 d 34.5%E+4 e 6.78%E+7 f 99.99%E+5 g 3%E+9 h 76%E+4
